--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
-body,h1,h2,h3,h4,h5,h6{
-  margin:0;
-  padding:0;
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-  box-sizing:border-box;
+body {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
