--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,144 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&family=Roboto:wght@100;300;500&display=swap");
-.container{
+.container {
   font-family: "Poppins", sans-serif;
   width: 368px;
   min-height: 600px;
-  height:max-content;
+  height: max-content;
   margin-top: 100px;
   border: solid;
   border-radius: 5px;
-  margin:16px;
+  margin: 16px;
+}
 
+.table-container {
+  padding: 0 10%;
+  margin: 40px auto 0;
+  display: flex;
+  justify-content: center;
+}
+.detail-table {
+  display: table-cell;
+}
+
+.detail-table thead tr th {
+  font-family: "Poppins", sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+  letter-spacing: 0.1px;
+  line-height: 23px;
+  text-decoration: none solid rgb(0, 0, 0);
+  text-align: left;
+  vertical-align: bottom;
+  word-spacing: 0px;
+  height: 27.6px;
+  width: 336.663px;
+  padding: 20px 20px 20px 20px;
+}
+.detail-table tbody tr{
+  border-top: 1px solid rgba(169, 161, 161,0.2);
+}
+.detail-table tbody tr td {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.1px;
+  line-height: 18.4px;
+  text-decoration: none solid rgb(0, 0, 0);
+  vertical-align: middle;
+  word-spacing: 0px;
+  height: 40px;
+  width: 336.663px;
+  padding: 20px 20px 20px 20px;
+}
+.detail-table tbody tr td span {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.1px;
+  line-height: 19.2px;
+  text-decoration: none solid rgb(99, 99, 99);
+  text-align: left;
+  word-spacing: 0px;
+  color:  #636363;
+  font-weight: normal;
+}
+
+@media (max-width:768px) {
+  .table-container{
+    display:block;
+
+    margin:0px;
+  }
+  .table-container thead{
+    display:flexbox;
+  }
+  .table-container ,.table-container tbody ,.table-container td{
+    display:flexbox;
+    width:100%;
+
+  }
+  .table-container tr{
+    margin-bottom :15px;
+  }
+}
+/* table {
+  border-spacing: 20px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+.heading {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 38px;
+  font-weight: 700;
+}
+.baseheading {
+  min-height: 40px;
+  max-width: 400px;
+  margin: 10px;
+  border-bottom: 1px solid rgb(208, 202, 202);
+}
+.basespan {
+  font-size: 20px;
+  font-weight: 600;
+  font-family: "Roboto", sans-serif;
+  margin: 120px 0px 0px 20px;
+}
+.freeheading {
+  height: 40px;
+  width: 380px;
+  margin: 10px;
+  border-bottom: 1px solid rgb(208, 202, 202);
+}
+.freediv {
+  font-size: 30px;
+  font-weight: 600;
+}
+.essenstailheading {
+  height: 40px;
+  width: 380px;
+  margin: 10px;
+
+  border-bottom: 1px solid rgb(208, 202, 202);
+
+  margin-right: 20px;
+}
+.tabledetails{
+
+    height: 45px;
+    width: 336.663px;
+    padding: 20px 20px 20px 20px;
+    border-bottom: 1px solid rgb(208, 202, 202);
 
 }
 
 
+@media (max-width:520px) {
 
+
+
+ table{
+   margin: 0;
+   padding: 0;
+ }
+} */
